# ferium

./: Cargo.toml
.github/workflows/: build.yml  release.yml
libium/: Cargo.toml
libium/src/: add.rs  scan.rs
libium/src/config/: filters.rs  mod.rs  structs.rs
libium/src/modpack/: add.rs  mod.rs
libium/src/modpack/curseforge/: structs.rs
libium/src/modpack/modrinth/: structs.rs
libium/src/upgrade/: check.rs  mod.rs  mod_downloadable.rs
src/: cli.rs  main.rs
src/subcommands/: list.rs  upgrade.rs
src/subcommands/profile/: create.rs
tests/configs/: empty.json  empty_profile.json  one_profile_full.json  two_modpacks_cfactive.json  two_modpacks_mdactive.json  two_profiles_one_empty.json
